--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Tyler Richard",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "1.16.0",
     "bower": "1.8.0",
     "express": "4.14.0",
     "gulp": "3.9.1",
@@ -17,6 +18,7 @@
     "gulp-ng-annotate": "2.0.0",
     "gulp-nodemon": "2.2.1",
     "gulp-uglify": "2.0.0",
+    "nodemailer": "2.7.0",
     "wiredep": "4.0.0"
   }
 }
